<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
    

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="正在请求内容，请稍后"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:contentDescription="。"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/activity_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/tv_replace_resources"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/replace_resources"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_pre_chapter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pre_chapter"
               android:contentDescription="@string/pre_chapter_button"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/tv_pause_or_play"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pause_or_play"
               android:contentDescription="@string/pause_or_play_button"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_next_chapter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/next_chapter"
               android:contentDescription="@string/next_chapter_button"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/more"
               android:contentDescription="@string/more_button"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>